Closed Bug 590857 Opened 14 years ago Closed 14 years ago

fix problematic usage of 'size_t' in IPC code, 'size_t' size depends on architecture

Categories

(Core :: IPC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta7+

People

(Reporter: jaas, Assigned: jaas)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch fix v1.0 (obsolete) — Splinter Review
In order to support cross-architecture out-of-process plugins we can't pass IPC messages with types that vary in size depending on architecture. 'size_t' is not the same size on every architecture and we need to fix problematic usage of it.

Much of this patch was written by Ben Turner, I wrote the shmem portion of it.
Attachment #469374 - Flags: review?(jones.chris.g)
blocking2.0: --- → beta6+
Blocks: 559142
Attachment #469374 - Attachment is patch: true
Attachment #469374 - Attachment mime type: application/octet-stream → text/plain
Attached patch fix v1.1Splinter Review
Linux compile fix.
Attachment #469374 - Attachment is obsolete: true
Attachment #469515 - Flags: review?(jones.chris.g)
Attachment #469374 - Flags: review?(jones.chris.g)
Comment on attachment 469515 [details] [diff] [review]
fix v1.1

We could avoid a lot of the static_casts in the pickle code, but there's definitely value in keeping parity with the old chromium impl.

Looks good, thanks!
Attachment #469515 - Flags: review?(jones.chris.g) → review+
pushed to mozilla-central

http://hg.mozilla.org/mozilla-central/rev/eea1c03b2d27
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: