Bug 590857: Fix problematic usage of 'size_t' in IPC code, 'size_t' size depends on architecture and sending it via IPC directly can break cross-architecture IPC. Part of this patch was written by Ben Turner. r=cjones a=blocking-b6